--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
@@ -108,7 +108,7 @@ Test whether claim frequency is different between obese and others.
 
 
 
-If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
+If obese is defined to be BMI above 30, use <tt>binom.test()</tt> to calculate 99% confidence
 interval for proportion of obese people and comment on the likelihood if more than
 20 pc are obese.
 
@@ -121,9 +121,10 @@ Solution 3:
 i)
 
 ```{r}
-
 BMI <- read.csv("BMIClaims.csv")
+
 n <- length(BMI$BMI)
+
 alpha <- 0.05
 ```
 
@@ -134,31 +135,31 @@ alpha <- 0.05
 
 
 ```{r}
-sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2
-,df=n-1)))
+sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2,df=n-1)))
 ```
 
-
+---
 
 ```{r}
-
 sigma <- 4
+
 statistic <- (n-1)*var(BMI$BMI)/sigma^2
+
 statistic
 
+```{r}
+> qchisq(alpha/2,n-1)
 ```
 
-> qchisq(alpha/2,n-1)
-[1] 117.098
-> qchisq(alpha/2,n-1,lower=FALSE)
-[1] 184.687
+```{r}
+qchisq(alpha/2,n-1,lower=FALSE)
+```
 > 2*(pchisq((n-1)*var(BMI$BMI)/sigma^2,df=n-1,lower.tail=FALSE))
 [1] 3.564503e-25
 [1]
 ---
 Since p-value is less than 5%, there is sufficient evidence to reject the hypothesis,
 i.e. the standard deviation of BMI is not equal to 4.
-[2]
 
 ---
 
@@ -171,7 +172,6 @@ binom.test(x,n,conf.level = 0.99)
 
 ---
 
-[2]
 Exact binomial test
 data: x and n
 number of successes = 10, number of trials = 150, p-value < 2.2e-16
@@ -184,7 +184,7 @@ probability of success
 
 ---
 
-Since 99% CI for p doesn’t contain p=0.2
+Since 99% CI for p doesn’t contain $p=0.2$
 it is unlikely that the proportion of obese policyholders is more than 20%.. ..
 
 ---
