--- a/00-L1-CS1B-ASI-MARCH-2022/L1-Question1.Rmd
+++ b/00-L1-CS1B-ASI-MARCH-2022/L1-Question1.Rmd
@@ -56,8 +56,8 @@ predict, anova - to answer parts of this question.
 
 i) Calculate Sxx, Sxy and Syy. 
 ii) Calculate alpha, beta and sigma2
-using results in part (i). (3)
-iii) Calculate fitted values of y using results in part (ii). (1)
+using results in part (i). 
+iii) Calculate fitted values of y using results in part (ii). 
 iv) Calculate residuals using results of earlier parts and Calculate mean and variance of 
 residuals and comment on the result. 
 v) Calculate 95% confidence interval for beta and comment if we can conclude that beta 
@@ -149,6 +149,7 @@ Syy
 
 ---
 
+#### Regression Estimates
 
 ```{r}
 
@@ -176,6 +177,7 @@ sigmasq
 
 ---
 
+#### Predicted Values
 
 ```{r}
 
@@ -189,6 +191,8 @@ expectedy
 
 ---
 
+#### Residuals
+
 ```{r}
 
 e=y-alpha-beta*x
@@ -200,6 +204,8 @@ e
 [7] -2.7587413 -1.2762238 0.2062937 -1.3111888 0.1713287 -0.3461538
 
 
+#### Mean and Varianceof the Residuals
+
 ```{r}
 meane=mean(e)
 meane
@@ -209,9 +215,10 @@ meane
 
 ---
 
-Mean value of residuals is close to zero as expected as e~N(0,sigma^2)
+* Mean value of residuals is close to zero as expected as e~N(0,sigma^2)
 (Otherwise, “e” could be calculated as e = y-expectedy)
-Var of e is slightly lower than sigma square as calculated in part ii – as denominator is not adjusted
+
+* Var of e is slightly lower than sigma square as calculated in part ii – as denominator is not adjusted
 When denominator of 10 gets used instead of 11 we see that var of residuals = sigma^2 
 
 ```{r}
@@ -219,15 +226,19 @@ var(e)*11/10
 ```
 
 
-```
----
 
-```{r}
+---
 
 v) 95% confidence interval for beta
 Ho: Beta is zero (i.e. no linear relationship between x and y)
 H1: Beta is not equal to zero
+
+```{r}
+
+
 (Beta_cap-0)/ sqrt(sigma^2_cap/ Sxx) ~ t10
+```
+
 We use t distribution with n-2 i.e. 10 degrees of freedom
 
 
@@ -269,12 +280,22 @@ Hence, can conclude that beta is not equal to zero at 5% level.
 ---
 
 Tabulated values of Chi square having 10 df can be obtained as
+
+
+```{r}
 chitenend1=qchisq(df=10, p=0.025)
 chitenend2=qchisq(df=10,p=0.975)
+
+```
+
+
+```{r}
 chitenend1
-[1] 3.246973
+#[1] 3.246973
 chitenend2
-[1] 20.48318
+# [1] 20.48318
+```
+
 End points of CI would be
 
 ---
@@ -288,14 +309,13 @@ sigmasqend2
 Hence 95% Confidence interval for sigma^2 is (5.795,36.559)
 
 ```
+
 ---
 
 #### Part (vi)
 
 ```{r}
-
-
-SSTOT = Syy = 1888 (as calculated in part i)
+SSTOT = Syy = 1888 # (as calculated in part i)
 SSREG = Sxy^2/Sxx 
 ss_reg=Sxy^2/Sxx
 ss_reg
