--- a/00-L1-CS1B-ASI-MARCH-2022/L1-Question2.Rmd
+++ b/00-L1-CS1B-ASI-MARCH-2022/L1-Question2.Rmd
@@ -38,56 +38,69 @@ pre {
 
 ---
 
-Q. 2) Policy and claims information (PolicyData.csv) of 650 policies is provided to you. The 
+Q. 2) Policy and claims information (***PolicyData.csv***) of 650 policies is provided to you. The 
 data contains following fields:
 
-* Policy : Policy Number
-* Claim : Number of claims corresponding to each policy
-* Cust_Exp: Policyholder’s experience (VS = Very satisfied, SA= Satisfied, DS= 
+* ***Policy***: Policy Number
+* ***Claim*** : Number of claims corresponding to each policy
+* ***Cust_Exp***: Policyholder’s experience (VS = Very satisfied, SA= Satisfied, DS= 
 Disappointed, VD= Very Disappointed) at the end of the policy tenure.
 
-Amount: Claim amount per policy. Note that amount is set 0 if there is no claim.
+* ***Amount***: Claim amount per policy. Note that amount is set 0 if there is no claim.
 
 ---
-i) Create a frequency table of claim and share how many policies don’t have any claim. 
-ii) Plot a histogram of claim count and suggest 2 distributions that can be a good fit. 
-iii) Given that claim count follows Poisson distribution with following two possible values 
+#### Exercises
+
+1. Create a frequency table of claim and share how many policies don’t have any claim. 
+2. Plot a histogram of claim count and suggest 2 distributions that can be a good fit. 
+3. Given that claim count follows Poisson distribution with following two possible values 
 for Poisson parameter:
-a) 0.35 and 
-b) 0.30 
----
-
-Compute confidence interval at 95% confidence level to assess which value is more 
+ a. 0.35 and 
+ b. 0.30 
+ Compute confidence interval at 95% confidence level to assess which value is more 
 suitable for the given data. 
-iv) Compute mean, variance and median of log of claim amount. (Name it: log amount). 
+---
+#### Exercises
+
+4. Compute mean, variance and median of log of claim amount. (Name it: log amount). 
 Make sure to exclude policies with no claim. (4)
-v) Obtain histogram and Normal QQ Plot of log amount. Add a line to the QQ plot for 
+5. Obtain histogram and Normal QQ Plot of log amount. Add a line to the QQ plot for 
 normal distribution 
-vi) Indicate which distribution the claim amount might be following using evidence from 
+6. Indicate which distribution the claim amount might be following using evidence from 
 (iv) and (v). 
 ---
+
+#### Exercises
 vii)Assuming the log amount (i.e. log of claim amount) follows a Normal distribution, test 
 if mean of log amount is greater than 10 at 90% level of confidence. State the 
 hypothesis and conclusion clearly. 
-viii) Assess whether the policyholder experience (i.e. Cust_Exp) changes with more 
+viii) Assess whether the policyholder experience (i.e. ***Cust_Exp***) changes with more 
 number of claims. Create contingency table and perform test to check the above 
 assertion. State the hypothesis clearly. 
+
 ---
 ix) Please explain why warning message appears while performing the above test. 
+
 x) Again, perform the above test by combining 
 a. Very Satisfied and Satisfied customers
 b. Disappointed and very disappointed customers
 and 
 c. 2 or more claims. 
----
+
 Please provide your conclusion on association of policyholder’s experience with 
-number of claims. (5)
+number of claims. 
+---
+
 xi) Amount is defined to be large if the amount is greater than 100,000. Calculate 95% 
 confidence interval for proportion of large claim, and comment on the likelihood if 
 more than 25% of claims are large. 
 ---
+
+
 Solution 2:
-i)
+
+
+#### Exercise 1
 
 
 ```{r}
@@ -114,7 +127,7 @@ table(policydata$Claim)
 #count(policydata,Claim)
 print("458 Policies don't have any claim")
 [1] "458 Policies don't have any claim"
-(2)
+
 ii)
 ```{r}
 hist(policydata$Claim)
@@ -123,6 +136,8 @@ hist(policydata$Claim)
 
 ---
 
+
+#### Exercise 3
 iii)
 
 ```{r}
@@ -152,10 +167,16 @@ lx=log(policydata$Amount[policydata$Amount>0])
 mean(lx)
 ```
 [1] 9.835205
+```{r}
 median(lx)
+```
 [1] 9.774659
+
+
+```{r}
 sd(lx)^2
-[1] 3.425705
+```
+
 
 ---
 Histogram of policydata$Claim
@@ -183,8 +204,13 @@ Hence,Claim amount might be following log normal distribution.
 
 ---
 vii)
-#Null Hypothesis : mu = 10 , alternate hypothesis mu >10
+
+Null Hypothesis : mu = 10 , alternate hypothesis mu >10
+
+```{r}
 t.test(lx,mu=10,alternative="greater", conf.level = .9)
+```
+---
 One Sample t-test
 data: lx
 t = -1.2337, df = 191, p-value = 0.8906
@@ -209,8 +235,11 @@ Sample Quantiles
 
 ---
 viii)
+
+```{r}
 ct=table(policydata$Claim,policydata$Cust_Exp)
 ct
+```
  
  DS SA VD VS
  0 63 306 20 69
@@ -218,7 +247,13 @@ ct
  2 16 14 6 0
  3 3 3 1 0
 # Null Hypothesis: No association between Policyholder's experience and Claim
+
+---
+
+```{r}
 chisq.test(ct)
+```
+
 Pearson's Chi-squared test
 data: ct
 X-squared = 47.749, df = 9, p-value = 2.846e-07
@@ -227,7 +262,11 @@ In chisq.test(ct) : Chi-squared approximation may be incorrect
 
 ---
 ix)
-#There are cells where the number of observations are less than 5. (1)
+
+There are cells where the number of observations are less than 5. (1)
+
+---
+
 x)
 policydata$Claim2=ifelse(policydata$Claim >2,2,policydata$Claim) 
 policydata$Cust_Exp2=ifelse(policydata$Cust_Exp %in% c("DS","VD"),"DS","SA") 
