--- a/00-B2/05-Part5.Rmd
+++ b/00-B2/05-Part5.Rmd
@@ -30,8 +30,7 @@ library(markovchain)
 
 ---
 
-Markov Chain
-========================
+###Markov Chain
 
 A particle is moving on the graph below by starting on a randomly chosen vertex (each with
 the same probability) and at each time step moving along one of the adjacent edges to a
