--- a/00-B2/05-Part6.Rmd
+++ b/00-B2/05-Part6.Rmd
@@ -34,23 +34,23 @@ pre {
 
 ---
 
-\noindent Suppose X has survival function defined by
+Suppose X has survival function defined by
 
 
 \[ S_{o}(X) = \frac{1}{10} (100 - x)^{\frac{1}{2}} \mbox { for }0 \leq x \leq 100.\]
 
-\noindent Create a function for survival model in R and then find the probability of:
+Create a function for survival model in R and then find the probability of:
 
 \begin{enumerate}[(a)]
-    \item a new born surviving till age 65.
-    \item 10 year old surviving till 95.
-    \item a new born die between the ages 65 and 70 years.
-\end{enumerate}
+* a new born surviving till age 65.
+* 10 year old surviving till 95.
+* a new born die between the ages 65 and 70 years.
+
 
 
 \includegraphics[]{00-B2/images/Mortality_1.JPG}
 
-\begin{framed} \begin{verbatim}
+```{r}
 #Define a function for S(x).
 
 Sx <- function(x){
@@ -63,32 +63,32 @@ Sx(65)
 
 
 
-\end{verbatim}\end{framed}
+
 
 
 0.591607978309962
 
 
 
-\begin{framed} \begin{verbatim}
+```{r}
 
 #10 year old surviving till 95
 z<-Sx(95)/Sx(10)
 z
 
-\end{verbatim}\end{framed}
+
 
 
 0.235702260395516
 
 
 
-\begin{framed} \begin{verbatim}
+```{r}
 #New born dying between the age of 65-70 years
 x<-Sx(65)-Sx(70)
 x
 
-\end{verbatim}\end{framed}
+
 
 
 0.0438854208047954
@@ -101,18 +101,18 @@ Create a mortality table q(x) using the survival function above for ages
 \[1,5,10,15,20,\ldots 85,90,95,96,97,98.\]
 
 
-\begin{framed} \begin{verbatim}
+```{r}
 age<-c(1,seq(5,95,by=5),seq(96,98,by=1))
 qx<-function(x){
 1-(Sx(x+1)/Sx(x))}
 mortality.table<-data.frame(age)
 mortality.table$q.x<-round(qx(mortality.table$age),10)
-\end{verbatim}\end{framed}
+
 
 \newpage 
-\begin{framed} \begin{verbatim}
+```{r}
 mortality.table
-\end{verbatim}\end{framed}
+
 
 \includegraphics[scale=1.5]{00-B2/images/Mortality_2_table.JPG}
 
@@ -124,12 +124,12 @@ mortality.table
 
 \[ \mu_{x} = \frac{1}{2(100-x)} \mbox { for }0 \leq x \leq 100.\]
 
-\noindent Use the approximation $q_x = 1 - exp(-\mu_{x}(x+1/2)$ to identify \texttt{qx} of all ages in table
+Use the approximation $q_x = 1 - exp(-\mu_{x}(x+1/2)$ to identify \texttt{qx} of all ages in table
 \[1,5,10,15,20..........85,90,95,96,97,98. \]
-\end{verbatim}\end{framed}
 
 
-\begin{framed} \begin{verbatim}
+
+```{r}
 #Define a function for Mu(x).
 mu<-function(x){
 1/(2*(100-x))}
@@ -149,11 +149,11 @@ mortality.table
 %%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \subsection*{Exercise 4}
-\noindent Plot a graph compare the \texttt{qx} derived from the survival function in Exercise 1 (in red color)
+Plot a graph compare the \texttt{qx} derived from the survival function in Exercise 1 (in red color)
 and function of \texttt{Mu.x} in Exercise 3 (in blue color).
 
 
-\begin{framed} \begin{verbatim}
+```{r}
 # Ploting qx and qx1 using the line graph.
 
 plot( seq(1,98), qx(seq(1,98)) ,
@@ -162,7 +162,7 @@ plot( seq(1,98), qx(seq(1,98)) ,
 
 lines( seq(1,98), qx1(seq(1,98)) ,
 	col="Blue")
-\end{verbatim}\end{framed}
+
 
 \includegraphics[scale=0.6]{00-B2/images/Mortality_4_Curve.png}
 
@@ -186,11 +186,11 @@ S 0 (x) = exp[-integral(μ x (t) dt]
 
 
 \begin{itemize}
-    \item The survival function S 0 (x) above is defined as:
+* The survival function S 0 (x) above is defined as:
 δ/δτ [log (S 0 (x)] = μ x = 1 / 2(100-x)
-    \item Deriving μ x using the above relationship in (1), we get the same function for μ x as specified in part (c) and
+* Deriving μ x using the above relationship in (1), we get the same function for μ x as specified in part (c) and
 hence creating mortality table using either survival function or hazard function shall give the same result.
-    \item There are minor differences in the graph of qx and that is purely due to the approximation assumed in part (c)
+* There are minor differences in the graph of qx and that is purely due to the approximation assumed in part (c)
 \end{itemize}
 
 
