--- a/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
+++ b/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
@@ -94,6 +94,8 @@ plot(a, main = "Time series of plots")
 
 ```{r eval = FALSE}
 #(ii)
+
+```{r}
 par(mfrow=c(1,2))
 acf(a,main="Sample ACF")
 pacf(a,main="Sample PACF")
@@ -101,9 +103,10 @@ pacf(a,main="Sample PACF")
 
 ---
 
+#### Part (B)
 
 ```{r echo = FALSE}
-#(ii)
+
 par(mfrow=c(1,2))
 acf(a,main="Sample ACF")
 pacf(a,main="Sample PACF")
@@ -112,32 +115,15 @@ pacf(a,main="Sample PACF")
 ---
 
 
-# (iii)
+#### Part  (C)
+
 ```{r}
 acf(a,plot = FALSE)
 
 ```
 
 
-## 
-## Autocorrelations of series 'a', by lag
-## 
-## 0.0000 0.0833 0.1667 0.2500 0.3333 0.4167 0.5000 0.5833 0.6667 0.7500 0.83
-33 
-## 1.000 0.922 0.890 0.875 0.864 0.850 0.836 0.819 0.805 0.797 0.7
-78 
-## 0.9167 1.0000 1.0833 1.1667 1.2500 1.3333 1.4167 1.5000 1.5833 1.6667 1.75
-00 
-## 0.756 0.734 0.710 0.686 0.663 0.632 0.602 0.569 0.542 0.512 0.4
-80 
-## 1.8333 1.9167 2.0000 2.0833 2.1667 2.2500 2.3333 2.4167 2.5000 2.5833 2.66
-67 
-## 0.451 0.426 0.391 0.367 0.334 0.298 0.264 0.233 0.204 0.173 0.1
-47 
-## 2.7500 2.8333 
-## 0.115 0.083
 
-```
 
 ---
 
@@ -147,6 +133,7 @@ pacf(a,plot = FALSE)
 
 
 ```
+
 ---
 
 ### PArt 4
@@ -160,6 +147,7 @@ s getting weaker"
 
 
 ---
+
 ```{r}
 # (v)
 s<-diff(a, lag=12,differences=1)
